--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪</title>
 </head>
+
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
@@ -34,32 +36,56 @@
       'Berne, Eric', 'Berra, Yogi', 'Berry, Wendell', 'Bevan, Aneurin', 'Ben-Gurion, David', 'Bevel, Ken', 'Biden, Joseph', 'Bennington, Chester', 'Bierce, Ambrose',
       'Billings, Josh', 'Birrell, Augustine', 'Blair, Tony', 'Beecher, Henry', 'Biondo, Frank'
     ];
-    
+
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const inventorsBornIn1500s = inventors.filter(inventor => inventor.year >= 1500 && inventor.year < 1600);
+    console.log(inventorsBornIn1500s);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const inventorsFullName = inventors.map(inventor => `${inventor.first} ${inventor.last}`)
+    console.log(inventorsFullName);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const inventorSortedByBirthdate = inventors.sort((a, b) => a.year - b.year)
+    console.log(inventorSortedByBirthdate)
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const howManyYearDidAllTheInventorsLiveAllTogether = inventors.reduce((acc, howManyYears) => acc + (howManyYears.passed - howManyYears.year)
+      , 0);
+    console.log(howManyYearDidAllTheInventorsLiveAllTogether);
 
     // 5. Sort the inventors by years lived
+    //const sortByYearsLived = inventors.map(inventor => inventor.passed - inventor.year)
+    const sortByYearsLived = inventors.sort((a, b) => (a.passed - a.year) - (b.passed - b.year))
+    console.log(sortByYearsLived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    const categoryLinks = Array.from(document.querySelectorAll('.mw-category a'));
+    const linksWithDe = categoryLinks.map(link => link.textContent).filter(link => link.includes('de'))
+
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const peopleAlphabeticallyByLastName = people.map(person => person.split(',')[0]).sort();
+    console.log(peopleAlphabeticallyByLastName);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
+    const sumUpInstances = data.reduce((acc, instance) => {
+      acc[instance] ? acc[instance] = acc[instance] + 1 : acc[instance] = 1
+      return acc;
+    }, {})
+    console.log(sumUpInstances);
+
 
   </script>
 </body>
+
 </html>
