--- a/06 - Type Ahead/index.html
+++ b/06 - Type Ahead/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Type Ahead 👀</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <form class="search-form">
@@ -14,9 +16,39 @@
       <li>or a state</li>
     </ul>
   </form>
-<script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+  <script>
+    const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
 
-</script>
+    const input = document.querySelector('.search');
+    const suggestions = document.querySelector('.suggestions');
+
+    async function fetchCityOrState(url) {
+      const response = await fetch(url);
+      const data = await response.json();
+      console.log(data);
+
+      input.addEventListener('input', (e) => {
+        suggestions.innerHTML = ``;
+        const { value } = e.currentTarget;
+        let newData = data.filter(object => object.city.includes(value))
+
+        console.log(newData);
+
+        newData.forEach(data => {
+          string = `
+            <li>
+              ${data.city}, ${data.state}
+            </li>`
+          suggestions.innerHTML += string;
+        })
+      })
+
+    }
+
+    fetchCityOrState(endpoint).then(data => data);
+
+
+  </script>
 </body>
+
 </html>
