--- a/07 - Array Cardio Day 2/index.html
+++ b/07 - Array Cardio Day 2/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪💪</title>
 </head>
+
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
@@ -26,16 +28,37 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const today = new Date();
+    const thisYear = today.getFullYear();
+
+    const IsAtLeastOnePerson19OrOlder = people.some(person => thisYear - person.year >= 19)
+    console.log(IsAtLeastOnePerson19OrOlder);
     // Array.prototype.every() // is everyone 19 or older?
+    const IsEveryone19OrOlder = people.every(person => thisYear - person.year >= 19)
+    console.log(IsEveryone19OrOlder);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const comment = comments.find(comment => comment.id === 823423)
+    console.log(comment);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    function deleteComment(array, id) {
+      const commentWithId = array.findIndex(comment => comment.id === id);
+
+      return [
+        ...array.slice(0, commentWithId),
+        ...array.slice(commentWithId + 1)
+      ];
+    }
+
+    const arrayWithoutTheId = deleteComment(comments, 823423)
+    console.log(arrayWithoutTheId);
 
   </script>
 </body>
+
 </html>
