--- a/15 - LocalStorage/index.html
+++ b/15 - LocalStorage/index.html
@@ -39,12 +39,16 @@
     <form class="add-items">
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
+      <input type="button" name="check-all" value="Check all">
+      <input type="button" name="uncheck-all" value="Uncheck all">
     </form>
   </div>
 
   <script>
     const addItems = document.querySelector('.add-items');
     const itemsList = document.querySelector('.plates');
+    const checkAll = document.querySelector('[name="check-all"]');
+    const unCheckAll = document.querySelector('[name="uncheck-all"]')
     const items = [];
 
     function mirrorDataFromLocalStorage() {
@@ -80,6 +84,18 @@
       this.reset();
     }
 
+    function checkAllItems() {
+      items.map(item => item.complete = true)
+      displayItems();
+      updateLocalStorage(items);
+    }
+
+    function unCheckAllItems() {
+      items.map(item => item.complete = false)
+      displayItems();
+      updateLocalStorage(items);
+    }
+
     addItems.addEventListener('submit', addItem);
     itemsList.addEventListener('click', (e) => {
       if (e.target.matches('[type="checkbox"]')) {
@@ -89,6 +105,10 @@
         displayItems();
       }
     })
+
+    checkAll.addEventListener('click', checkAllItems);
+    unCheckAll.addEventListener('click', unCheckAllItems);
+
 
     mirrorDataFromLocalStorage();
 
