--- a/16 - Mouse Move Shadow/index.html
+++ b/16 - Mouse Move Shadow/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Mouse Shadow</title>
 </head>
+
 <body>
 
   <div class="hero">
@@ -11,30 +13,62 @@
   </div>
 
   <style>
-  html {
-    color: black;
-    font-family: sans-serif;
-  }
+    html {
+      color: black;
+      font-family: sans-serif;
+    }
 
-  body {
-    margin: 0;
-  }
+    body {
+      margin: 0;
+    }
 
-  .hero {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
-  }
+    .hero {
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: black;
+    }
 
-  h1 {
-    text-shadow: 10px 10px 0 rgba(0,0,0,1);
-    font-size: 100px;
-  }
+    h1 {
+      text-shadow: 10px 10px 0 rgba(0, 0, 0, 1);
+      font-size: 100px;
+    }
   </style>
 
-<script>
-</script>
+  <script>
+    const div = document.querySelector('.hero');
+    const heading = document.querySelector('.hero h1');
+    const walk = 100;
+
+    function handleMousemove(e) {
+      const { offsetWidth, offsetHeight } = div;
+      let { offsetX, offsetY } = e;
+      //console.log(offsetX, offsetY);
+
+      if (this !== e.target) {
+        offsetX += e.target.offsetLeft;
+        offsetY += e.target.offsetTop;
+        //console.log(offsetX, offsetY);
+      }
+
+      const posX = Math.round(offsetX / offsetWidth * walk - walk / 2);
+      const posY = Math.round(offsetY / offsetHeight * walk - walk / 2);
+      //console.log(offsetX, offsetY);
+
+
+      heading.style.textShadow = `
+      ${posX}px ${posY}px rgba(255,255,0, 0.7),
+      ${posX * -1}px ${posY}px rgba(255,0,0, 0.7),
+      ${posY}px ${posX * -1}px rgba(255,0,255, 0.7),
+      ${posY * -1}px ${posX}px rgba(0,0,255, 0.7)
+      `;
+
+      //text.setAttribute('style', `text-shadow: ${e.offsetX}px ${e.offsetY}px green`);
+    }
+
+    div.addEventListener('mousemove', handleMousemove);
+  </script>
 </body>
+
 </html>
