Day#18: added my completed task and modified readme

--- a/18 - Adding Up Times with Reduce/index.html
+++ b/18 - Adding Up Times with Reduce/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Videos</title>
 </head>
+
 <body>
   <ul class="videos">
     <li data-time="5:43">
@@ -181,7 +183,24 @@
       Video 58
     </li>
   </ul>
-<script>
-</script>
+  <script>
+    const videos = [...document.querySelectorAll('[data-time]')];
+
+    const total = videos.reduce((acc, video) => {
+      const dataTime = video.dataset.time.split(':');
+      const [minutes, seconds] = [parseInt(dataTime[0]), parseInt(dataTime[1])];
+
+      return acc + (minutes * 60 + seconds);
+    }, 0)
+
+    const hours = Math.floor(total / 3600);
+    const minutes = Math.floor((total / 60) % 60);
+    const seconds = total % 60;
+
+    console.log(hours);
+    console.log(minutes);
+    console.log(seconds);
+  </script>
 </body>
+
 </html>
