--- a/27 - Click and Drag/index.html
+++ b/27 - Click and Drag/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Click and Drag</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="items">
     <div class="item item1">01</div>
@@ -34,8 +36,40 @@
     <div class="item item25">25</div>
   </div>
 
-<script>
-</script>
+  <script>
+    const items = document.querySelector('.items');
+    let isDown = false;
+    let startX;
+    let scrollLeft;
 
-  </body>
+    items.addEventListener('mousedown', (e) => {
+      isDown = true;
+      items.classList.add('active');
+      startX = e.pageX - items.offsetLeft;
+      scrollLeft = items.scrollLeft;
+    })
+
+    items.addEventListener('mouseleave', () => {
+      isDown = false;
+      items.classList.remove('active');
+    })
+
+    items.addEventListener('mouseup', () => {
+      isDown = false;
+      items.classList.remove('active');
+    })
+
+    items.addEventListener('mousemove', (e) => {
+      if (!isDown) return;
+
+      e.preventDefault();
+      const x = e.pageX - items.offsetLeft;
+      const walk = (x - startX) * 3;
+      items.scrollLeft = scrollLeft - walk;
+    })
+
+  </script>
+
+</body>
+
 </html>
